# ai-hackathon-ebh

./: .gitignore  pyproject.toml
backend/: .env  .env.example  agent_implementation.py  main.py
backend/agents/: agent.py
backend/data_processing/: pandas_to_sqlite.py  sample_load_sqlite.py
backend/databases/: price_paid_data.db  scraped_listings.db
backend/prompts/: current_market_data_to_sql.jinja2  historical_data_final_response.jinja2  historical_data_to_sql.jinja2  orchestrator.jinja2
backend/tools/: get_current_market_data.py  get_nearby_cafe.py  get_time_to_work.py  historical_data_tool.py  orchestrator.py  search_engine.py
data/: price_paid_kensington_chelsea.csv  price_paid_sample.csv  sample.db
notebooks/: .env  explore.ipynb  listings_data.ipynb  llama_index_agent.ipynb  price_paid_data.ipynb
scraper/: main.py  pyproject.toml
ui/: main.py
