[tool.poetry]
name = "izba ai"
version = "0.1.0"
description = ""
authors = ["Stas Chistyakov <stas@domwise.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
notebook = "^7.2.2"
jupyter = "^1.1.1"
pandas = "^2.2.3"
streamlit = "^1.39.0"
python-dotenv = "^1.0.1"
openai = "^1.52.0"
jinja2 = "^3.1.4"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
llama-index = "^0.11.19"
llama-hub = "^0.0.79.post1"
googlemaps = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
